# recipeai

./: .gitignore  main.py  pyproject.toml  storage_session_cli.py  template.html
app/agent/: recipe.py
app/core/: cache.py  config.py  rate_limiter.py
app/tools/: magnit.py
research/: session.ipynb
research/magnit/: magnit.html  magnit.ipynb  magnit_product.html  magnit_products.json
