[project]
name = "recipeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.15.0",
    "diskcache>=5.6.3",
    "jinja2>=3.1.6",
    "langchain>=1.3.7",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]
